Bug Fix and new data

--- a/templates/table.html
+++ b/templates/table.html
@@ -34,6 +34,7 @@ body{
 <tr><td style="text-align: right;">1003</td><td>Pink Sauce Pasta   </td><td style="text-align: right;">  210</td><td>Pasta made in a blend of tomato and cream sauce i.e Pink sauce.                                         </td></tr>
 <tr><td style="text-align: right;">1004</td><td>Chocolate Milkshake</td><td style="text-align: right;">   80</td><td>A drink made by blending milk, ice-cream and flavourings of chocolate into a thick, cold, sweet mixture.</td></tr>
 <tr><td style="text-align: right;">1005</td><td>Coke               </td><td style="text-align: right;">   50</td><td>A chilled bottle of classic coca-cola.                                                                  </td></tr>
+<tr><td style="text-align: right;">1006</td><td>Choco-lava cake    </td><td style="text-align: right;">   95</td><td>Molten lava inside chocolate cake                                                                       </td></tr>
 <tr><td style="text-align: right;">1007</td><td>Pepsi              </td><td style="text-align: right;">   50</td><td>A chilled bottle of pepsi.                                                                              </td></tr>
 </tbody>
 </table>
